# SuperKeet

./: .coverage.Christophers-MacBook-Pro-2.local.46225.XRJSFyTx  .coverage.Christophers-MacBook-Pro-2.local.5173.XiulMfQx  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SETUP.md  checkpython.sh  config.yml  config.yml.backup  coverage.json  credentials.yml.dist  pyproject.toml  startkeet.command  superkeet.spec  test_components.py
.github/: README.md
.github/workflows/: ci.yml  quality.yml  release.yml
assets/: SuperKeet.icns
src/: __init__.py  download_model.py  main.py
src/asr/: transcriber.py
src/audio/: __init__.py  recorder.py
src/batch/: audio_converter.py  batch_transcriber.py  file_processor.py  progress_manager.py
src/config/: __init__.py  config_loader.py  validators.py
src/hotkey/: __init__.py  listener.py
src/services/: config_service.py  device_service.py
src/text/: __init__.py  injector.py
src/ui/: __init__.py  audio_animation_widget.py  batch_progress_dialog.py  drop_zone_widget.py  first_run_dialog.py  main_window.py  settings_dialog.py  tray_app.py  waveform_widget.py
src/utils/: __init__.py  audio_debug.py  exceptions.py  file_manager.py  logger.py  transcript_logger.py
superkeet/: download_model.py  main.py
superkeet/asr/: __init__.py  transcriber.py
superkeet/audio/: __init__.py  device_manager.py  diagnostics.py  error_recovery.py  memory_manager.py  permissions.py  recorder.py  stream_manager.py
superkeet/batch/: __init__.py  audio_converter.py  batch_transcriber.py  file_processor.py  progress_manager.py
superkeet/config/: config_loader.py  validators.py
superkeet/hotkey/: listener.py
superkeet/services/: __init__.py  config_service.py  device_service.py
superkeet/text/: injector.py
superkeet/ui/: __init__.py  audio_animation_widget.py  batch_progress_dialog.py  drop_zone_widget.py  first_run_dialog.py  main_window.py  settings_dialog.py  tray_app.py
superkeet/utils/: audio_debug.py  exceptions.py  file_manager.py  logger.py  transcript_logger.py
