[project]
name = "superkeet"
version = "0.1.0"
description = "FOSS voice-to-text application for macOS"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
dependencies = [
    "parakeet-mlx>=0.3.0,<1.0.0",
    "PySide6>=6.6.0,<7.0.0",
    "sounddevice>=0.4.6,<1.0.0",
    "pynput>=1.7.6,<2.0.0",
    "pyperclip>=1.8.2,<2.0.0",
    "numpy>=2.2.5,<2.3",
    "scipy>=1.11.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
    "pyqtgraph>=0.13.7,<1.0.0",
    "soundfile>=0.13.1,<1.0.0",
    "ruamel-yaml>=0.18.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "filelock>=3.13.0,<4.0.0",
    "ffmpeg-python>=0.2.0,<1.0.0",
    "python-magic>=0.4.27,<1.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "psutil>=5.9.0,<6.0.0",
]

[project.scripts]
superkeet = "superkeet.main:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.7.0,<2.0.0",
    "pytest-cov>=6.2.1,<7.0.0",
    "pytest-qt>=4.2.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "bandit>=1.7.5,<2.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "pyinstaller>=6.15.0,<7.0.0",
    "radon>=6.0.1,<7.0.0",
    "vulture>=2.10,<3.0.0",
    "interrogate>=1.5.0,<2.0.0",
    "xenon>=0.9.0,<1.0.0",
    "cohesion>=1.0.0,<2.0.0",
    "pip-audit>=2.6.0,<3.0.0",
    "refurb>=2.0.0,<3.0.0",
    "pylint>=3.0.0,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-config",
    "--strict-markers",
    "--cov=superkeet",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["superkeet"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.ruff.per-file-ignores]
"tests/*" = ["E501"]
